[package]
name = "interoper"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Build time tool for using Node.js packages from Rust project"
homepage = "https://github.com/kappa8719/interoper"
repository = "https://github.com/kappa8719/interoper"

[workspace]
members = ["."]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0"
anyhow = "1"
